[gd_scene load_steps=6 format=3 uid="uid://jfw74y8eg8hn"]

[ext_resource type="Script" path="res://scripts/entities/player/Player.gd" id="1_c8031"]
[ext_resource type="Texture2D" uid="uid://degn8c3cl1sgh" path="res://icon.svg" id="2_xd3ao"]
[ext_resource type="Script" path="res://scripts/entities/player/PlayerHealth.gd" id="3_67myh"]
[ext_resource type="Script" path="res://scripts/entities/player/PlayerMovement.gd" id="4_j04j7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5fflx"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(183, 408)
scale = Vector2(1.6, 1.96)
script = ExtResource("1_c8031")
max_lives = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.159999, 0.239999)
texture = ExtResource("2_xd3ao")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5fflx")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.05
drag_top_margin = 0.05
drag_right_margin = 0.05
drag_bottom_margin = 0.05

[node name="HealthController" type="Node" parent="."]
script = ExtResource("3_67myh")

[node name="MovementController" type="Node" parent="."]
script = ExtResource("4_j04j7")
max_jumps = 2

[connection signal="loose_lives" from="HealthController" to="." method="_loose_live"]
